--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,27 @@
     padding: 0;
 }
 
+body {
+    text-align: center;
+}
+
+#botao {
+    margin-top: 40px;
+}
 .grid-item {
-    width: calc(100%/16);
-    height: calc(100vh/16);
+    height: calc(800px/16);
+    width: calc(800px/16);
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 #container {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    height: 100vh;
+    height: 800px;
+    width: 800px;
+    margin: auto;
+    margin-top: 80px;
+    border: 1px solid black;
 }
